--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Anantdeep Dhingra
-logo: /assets/img/headshot_circle.png
-#description: text below image
-#show_downloads: true
+#logo: /assets/img/headshot_circle.png
+description: Welcome to my portfolio, feel free to download this repo below!
+show_downloads: true
 theme: jekyll-theme-minimal
