--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@ title: Anantdeep Dhingra
 #logo: /assets/img/headshot_circle.png
 description: Welcome to my portfolio, feel free to download this repo below!
 show_downloads: true
-theme: jekyll-theme-minimal
+theme: jekyll-theme-hacker
